[project]
name = "maintenance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dateparser>=1.2.1",
    "human-readable>=2.0.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
